docs/1.0.0/_sources/deployment/update-pdi.md.txt
# AMR Updating Design PDI in Flash

1.  The ami\_tool cfgmem\_info command will list the available partitions that have been defined in the FPT.

    ```bash
    # Usage: ami_tool cfgmem_info -d <bdf> -t <type> [options...]
    sudo ami_tool cfgmem_info -d 21:00.0 -t primary
    ```

        Primary FPT:

        FPT
        -------
        Version       | 1
        Header Size   | 128
        Entry Size    | 128
        Entries       | 2


        Partition   | Type       | Address      | Size
        ------------------
        0           | PDI_BOOT   | 0x00008000   | 0x07e00000
        1           | PDI_BOOT   | 0x07e08000   | 0x07e00000

2.  The ami\_tool cfgmem\_program command can then be used to write a design pdi to a PDI\_BOOT partition.

e.g.

    ```bash
    # usage: sudo ami_tool cfgmem_program -d <bdf> -t <type> -i <pdi path> -p <flash partition number>
    sudo ami_tool cfgmem_program -d 21:00.0 -t primary -i /opt/amd/amr/amd_v80_gen5x8_25.1/design.pdi -p 0
    ```
    ----------------
    Device | 21:00.0
    ----------------
    Current Configuration
    ----------------
    UUID   | 718e6aa12177bd6fda0ea8f4e32614a1
    ----------------
    Incoming Configuration
    ----------------
    UUID      | 709c2688cb801825929d52552b83354b
    Path      | /opt/amd/amr/amd_v80_gen5x8_25.1/design.pdi
    Partition | 0
    ----------------
    Are you sure you wish to proceed? [Y/n]: Y
    
    Updating base flash image...
    [####################################################################################################] 100% |
    Image programming complete.
    Will do a hot reset to boot into partition 0. This may take a minute...

**Note:** This command takes \> 10 mins to complete when programming the amd\_v80\_gen5x8\_24.1\_xbtest\_stress/design.pdi file to flash. Once the flash programming starts, as indicated by the progress bar percentage. Once after a hot reset, we can see updated PDI info using ami\_tool overview command.

3.  Unless the -q option was specified, AMI will automatically instruct a boot to occur from the newly updated partition upon the completion of the cfgmem\_program command.

Subsequent boots from any of the available PDI\_BOOT partitions can be performed using the ami\_tool device\_boot command.

    sudo ami_tool device_boot -d 21:00.0 -p 0

When using this approach it is important to make sure that the version of AMI is compatible with the version of AMC which is running on the card (compatibility is indicated by having the same Major & Minor version numbers in the AMI/AMC **Major.Minor.Patch** version number format.)

Further details on how to use the AMI tool to update the design PDI can be found here [AMR Management Interface userguide (ami\_tool)](../../deployment/ami-tool-guide)

